--- a/about.html
+++ b/about.html
@@ -170,8 +170,8 @@
                         <i class="fas fa-user-tie" style="font-size: 40px;"></i>
                     </div>
                     <h3 class="feature-title">
-                        <span class="english">Sarah M.</span>
-                        <span class="swahili">Sarah M.</span>
+                        <span class="english">Irene M.</span>
+                        <span class="swahili">Irene M.</span>
                     </h3>
                     <p class="feature-description" style="color: var(--gold); font-weight: 500;">
                         <span class="english">CEO & Co-Founder</span>
@@ -188,8 +188,8 @@
                         <i class="fas fa-laptop-code" style="font-size: 40px;"></i>
                     </div>
                     <h3 class="feature-title">
-                        <span class="english">James K.</span>
-                        <span class="swahili">James K.</span>
+                        <span class="english">Georgw W.</span>
+                        <span class="swahili">George W.</span>
                     </h3>
                     <p class="feature-description" style="color: var(--gold); font-weight: 500;">
                         <span class="english">CTO & Co-Founder</span>
